recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: only classes can have declared but undefined members
def branche(steps:Int, length:Double, angle:Double, shrink:Double)
    ^