recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

def branche(steps:Int, length:Double, angle:Double, shrink:Double)
avance(length)
droite(angle)
branche(steps, length*shrink, angle, shrink)



}
